--- a/ShoppingApp/app/build.gradle
+++ b/ShoppingApp/app/build.gradle
@@ -42,6 +42,11 @@ dependencies {
 
     def lifecycle_version = "2.2.0"
 
+    /**
+     * TODO (Step 2): Add the mealz dependency
+     * https://miamtech.github.io/mealz-documentation/docs/android/overview/installation
+     */
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
