--- a/ShoppingApp/settings.gradle
+++ b/ShoppingApp/settings.gradle
@@ -10,6 +10,10 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        /**
+        * TODO (Step 1): Add the dependency resolution config
+         * https://miamtech.github.io/mealz-documentation/docs/android/overview/installation
+        */
     }
 }
 rootProject.name = "Shopping App"
