--- a/ShoppingApp/settings.gradle
+++ b/ShoppingApp/settings.gradle
@@ -11,9 +11,12 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         /**
-        * TODO (Step 1): Add the dependency resolution config
-         * https://miamtech.github.io/mealz-documentation/docs/android/overview/installation
+        * (Step 1): Add the dependency resolution config
+        * https://miamtech.github.io/mealz-documentation/docs/android/overview/installation
         */
+        maven {
+            url = uri("https://github.com/miamtech/releaseMealz/raw/main")
+        }
     }
 }
 rootProject.name = "Shopping App"
